<resources>
    <string name="app_name">UITS University</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">University Of Information Technology And Sciences</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about">About Uits</string>
    <string name="menu_authorities">Authorities</string>
    <string name="about_uits">About Uits</string>
    <string name="authorities">Authorities</string>
    <string name="admission">Admission</string>
    <string name="scholarship"><![CDATA[Scholarship & Financial Aid]]></string>
    <string name="academics">Academics</string>
    <string name="important_links">Important Links</string>
    <string name="adminstration">Adminstration</string>
    <string name="app_info">App Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_info_details">
        This app is a concern of ICT Cell, UITS. Only Android version is available now.\nCurrent version : 1.0.\n\nMade by :
        \nThis App was made with the help of Md. Monirul Islam, Assistant Professor and Director, ICT Cell.
        And was made by a student of CSE Department, UITS.
    </string>
    <string name="dev_details">Developer\'s details :</string>
    <string name="dev_info1">Mohammad Minhaz Iftekhar</string>
    <string name="dev_info2">Linkedin : https://www.linkedin.com/in/minhaz-iftekhar-07a5911bb/</string>
    <string name="dev_info3">Batch 45 , Dept. Of CSE, UITS</string>
    <string name="admission_label">Admission</string>
    <string name="scholarship_label">Scholarship</string>
    <string name="academics_label">Academics</string>
    <string name="adminstration_label">Adminstration</string>
    <string name="links_label">Important Links</string>
    <string name="app_info_label">App Information</string>
    <string name="history">History</string>
    <string name="vision"><![CDATA[Vision & Mission]]></string>
    <string name="news_letter">News Letter</string>
    <string name="press"><![CDATA[Press & Media]]></string>
    <string name="chairman">Chairman</string>
    <string name="board_of_trustees">Board Of Trustees</string>
    <string name="syndicate">Syndicate</string>
    <string name="academic_council">Academic Council</string>
    <string name="vice_chancellor">Vice Chancellor</string>
    <string name="pro_vice_chancellor">Pro - Vice Chancellor</string>
    <string name="treasurer">Treasurer</string>
    <string name="ucam">Ucam</string>
    <string name="undergraduate_programs">Undergraduate Programs</string>
    <string name="graduate_programs">Graduate Programs</string>
    <string name="tuition_fees">Tuition Fees</string>
    <string name="tuition_fees_calculator">Tuition Fees Calculator</string>
    <string name="apply_online">Apply Online</string>
    <string name="faqs">FAQs</string>
    <string name="regular_waiver"><![CDATA[Regular Waiver & Scholarships]]></string>
    <string name="special_waiver"><![CDATA[Special Waiver & Scholarships]]></string>
</resources>