<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_ucam"
            android:title="@string/ucam" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/about_uits" />
        <item
            android:id="@+id/nav_authorities"
            android:title="@string/authorities" />
        <item
            android:id="@+id/nav_admission"
            android:title = "@string/admission"/>
        <item
            android:id="@+id/nav_scholarship"
            android:title="@string/scholarship" />
        <item
            android:id="@+id/nav_academics"
            android:title="@string/academics" />
        <item
            android:id="@+id/nav_adminstration"
            android:title="@string/adminstration"/>
        <item
            android:id="@+id/nav_links"
            android:title="@string/important_links"/>
        <item
            android:id="@+id/nav_app_info"
            android:title="@string/app_info"/>
    </group>
</menu>