<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.uitsuniversity.Fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.uitsuniversity.Fragments.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_authorities"
        android:name="com.uitsuniversity.Fragments.AuthoritiesFragment"
        android:label="@string/menu_authorities"
        tools:layout="@layout/fragment_authorities" />
    <fragment
        android:id="@+id/nav_admission"
        android:name="com.uitsuniversity.Fragments.AdmissionFragment"
        android:label="@string/admission_label"
        tools:layout="@layout/fragment_admission" />
    <fragment
        android:id="@+id/nav_scholarship"
        android:name="com.uitsuniversity.Fragments.ScholarshipFragment"
        android:label="@string/scholarship_label"
        tools:layout="@layout/fragment_scholarship" />

    <fragment
        android:id="@+id/nav_adminstration"
        android:name="com.uitsuniversity.Fragments.AdminstrationFragment"
        android:label="@string/adminstration_label"
        tools:layout="@layout/fragment_adminstration" />
    <fragment
        android:id="@+id/nav_app_info"
        android:name="com.uitsuniversity.Fragments.AppInfoFragment"
        android:label="@string/app_info_label"
        tools:layout="@layout/fragment_app_info" />
    <fragment
        android:id="@+id/nav_ucam"
        android:name="com.uitsuniversity.Fragments.UcamFragment"
        android:label="Ucam"
        tools:layout="@layout/fragment_ucam" />
</navigation>