<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Fragments.AppInfoFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:padding="16dp"
        android:text="@string/app_info_details"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:textStyle="bold"
        android:text="@string/dev_details"
        android:textColor="@color/black"
        android:textSize="16sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/dev_info1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textIsSelectable="true"
        android:text="@string/dev_info2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/dev_info3"
        />

</LinearLayout>