<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.AdmissionFragment"
    android:id="@+id/fragment_container_admission"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/undergrad_program"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?android:attr/selectableItemBackground"
            >
            <ImageView

                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/undergraduate_programs"
                android:textColor="#AA0A0A"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/graduation_prog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?android:attr/selectableItemBackground"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/logo2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/graduate_programs"
                android:textColor="#AA0A0A"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/tuition_fees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?android:attr/selectableItemBackground"
            >
            <ImageView

                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/logo2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/tuition_fees"
                android:textColor="#AA0A0A"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tuition_fees_calculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?android:attr/selectableItemBackground"
            >
            <ImageView

                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/logo2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/tuition_fees_calculator"
                android:textColor="#AA0A0A"
                android:textSize="16sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/apply_online"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?android:attr/selectableItemBackground"
            >
            <ImageView

                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/logo2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/apply_online"
                android:textColor="#AA0A0A"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/faqs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?android:attr/selectableItemBackground"
            >
            <ImageView

                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/logo2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/faqs"
                android:textColor="#AA0A0A"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>